created user authentication and displayed ChatBar, Main page

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  margin: 0 auto;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  color: #ffffff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  /*
+  color: #080822;
+  color: #08081b;
+  color: #11112b;
+  color: #2b2b47;
+
+
+
+  color: #17212B;
+  color: #242F3D; */
+
+  color: #546275;
+  color: #4a586b;
+  /* color: #0E1621; */
+
+  /* color: '#4a586b'
+    color '#10102b',
+    color '#23233f',
+    color '#313159',
+    color '#546275',
+    color '#165bb1',
+    color '#297ce3',
+    color '#1a6bcf',
+    color'#1455a5', ,
+    color '#0E1621',
+    color '#2b2b47',
+    color '#08081b',
+    color '#080822', */
+
+
+}
+
+.rs-drawer-wrapper .rs-drawer-left {
+  width: 30%;
+
+
+}
+
+@media screen and (max-width: 768px) {
+  .rs-drawer-wrapper .rs-drawer-left {
+    width: 100%;
+  }
+}
+
+
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: #2b2b47;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px #546275;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6f8097;
+  border-radius: 10px;
 }
